# cqlrs

./: .gitignore  Cargo.toml  README.md
src/: cli.rs  connection.rs  error.rs  executor.rs  formatter.rs  main.rs  repl.rs
